src/test/deca/context/valid/class/valid_dummy_extend_class.deca
// Description:
//    Test of a class declaration with extend
//    Test rule 1.3
//
// Result:
//      All good ! :D
//
// History:
//    created on 09/01/2025

class Dummy {

}

class Dummy2 extends Dummy {

}

{
    println("All good ! :D");
}
